update staff and driver notification